add layout devise top about all-btn

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,13 +24,13 @@
  }
 // フラッシュメッセージ
 .notice {
-  background-color: #aabac9;
+  background-color: rgba(216, 219, 217, 0.4);
 }
 .success {
-  background-color: #d7d9e5;
+  background-color: rgba(201, 194, 224, 0.4);
 }
 .alert {
-  background-color: red;
+  background-color: rgba(255, 238, 125, 0.4);
 }
 
 
