--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -5,8 +5,8 @@
     <div class="row">
       <div class="col-8">
         <div id="title-box">
-          <h1 class="profile-title">About</h1>
-          <h1 class="subtitle">About Me</h1>
+          <h1 class="profile-title d-none d-lg-block">About</h1>
+          <h1 class="subtitle d-none d-lg-block">About Me</h1>
         </div>
       </div>
       <div class="col-4"></div>
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="row py-5">
       <div class="col-2 d-flex align-items-center">
-        <h3 class="vertical-text">ABOUT US</h3>
+        <h3 class="vertical-text d-none d-md-block">ABOUT US</h3>
       </div>
       <div class="col-8 text-center">
         <h3 class="pb-5">金融リテラシーを身につけ幸せな未来を。</h3>
