--- a/app/views/homes/investment.html.erb
+++ b/app/views/homes/investment.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container font-family">
   <div class="row my-5 text-center">
     <div class="col"><h6>安定した収入がある</h6></div>
   </div>
@@ -39,10 +39,10 @@
     <div class="col deposit-modal"><h6>投資の前に定期預金の積み立てから</h6></div>
   </div>
   <div class="row mb-5 text-center">
-    <div class="col trust-modal"><%= link_to '特徴や情報', trust_path, class: 'btn btn-primary' %><p class="close-modal">もう一度診断をする</p></div>
-    <div class="col stock-modal"><%= link_to '特徴や情報', stock_path, class: 'btn btn-primary' %><p class="close-modal">もう一度診断をする</p></div>
-    <div class="col asset-modal"><%= link_to '特徴や情報', asset_path, class: 'btn btn-primary' %><p class="close-modal">もう一度診断をする</p></div>
-    <div class="col nisa-modal"><%= link_to '特徴や情報', nisa_path, class: 'btn btn-primary' %><p class="close-modal">もう一度診断をする</p></div>
-    <div class="col deposit-modal"><%= link_to '特徴や情報', deposit_path, class: 'btn btn-primary' %><p class="close-modal">もう一度診断をする</p></div>
+    <div class="col trust-modal"><%= link_to '特徴や情報', trust_path, class: 'btn btn-outline-dark btn-block' %><p class="close-modal">もう一度診断をする</p></div>
+    <div class="col stock-modal"><%= link_to '特徴や情報', stock_path, class: 'btn btn-outline-dark btn-block' %><p class="close-modal">もう一度診断をする</p></div>
+    <div class="col asset-modal"><%= link_to '特徴や情報', asset_path, class: 'btn btn-outline-dark btn-block' %><p class="close-modal">もう一度診断をする</p></div>
+    <div class="col nisa-modal"><%= link_to '特徴や情報', nisa_path, class: 'btn btn-outline-dark btn-block' %><p class="close-modal">もう一度診断をする</p></div>
+    <div class="col deposit-modal"><%= link_to '特徴や情報', deposit_path, class: 'btn btn-outline-dark btn-block' %><p class="close-modal">もう一度診断をする</p></div>
   </div>
 </div>
