--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -22,7 +22,7 @@
           <%= f.attachment_field :image %>
         </div>
         <div class="col-3">
-          <%= f.submit '投稿', class: 'btn btn-primary' %>
+          <%= f.submit '投稿', class: 'btn btn-outline-dark' %>
         </div>
       </div>
       <% end %>
