--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,14 +6,19 @@
 .follow-count a {
   color: #57575f;
 }
+.follow-count a:hover {
+  color: #57575f;
+}
+
+
 /*表示するテキストが切り替わる*/
 .follow-btn {
     /*テキストの基点とするためrelativeを指定*/
   position: relative;
     /*ボタンの形状*/
   border: 1px solid #555;
-  border-radius:25px;
-  min-width:130px;
+  border-radius: 25px;
+  min-width: 130px;
   padding: 20px;
   text-align: center;
   display: inline-block;
@@ -23,18 +28,16 @@
     /*アニメーションの指定*/
   transition: all .2s;
 }
-
 /*hoverした際の変化*/
 .follow-btn:hover{
   background:#333;
   color:#fff;
 }
-
 .follow-btn span{
     /*絶対配置でテキストの位置を決める*/
   position: absolute;
   left: 50%;
-  top:50%;
+  top: 50%;
   transform:translate(-50%,-50%);
     /*アニメーションの指定*/
   transition: all .5s;
@@ -42,17 +45,14 @@
   display: block;
   white-space: nowrap;
 }
-
 /*差し替わるテキストの設定*/
 .follow-btn span:nth-child(2){
   opacity:0;/*透過0に*/
 }
-
 /*hoverするとテキストが入れ替わる設定*/
 .follow-btn:hover span:nth-child(1){
   opacity:0;/*透過0に*/
 }
-
 .follow-btn:hover span:nth-child(2){
   opacity:1;/*不透明に*/
 }
@@ -62,8 +62,8 @@
   position: relative;
     /*ボタンの形状*/
   border: 1px solid #555;
-  border-radius:25px;
-  min-width:130px;
+  border-radius: 25px;
+  min-width: 130px;
   padding: 20px;
   text-align: center;
   display: inline-block;
@@ -73,18 +73,16 @@
     /*アニメーションの指定*/
   transition: all .2s;
 }
-
 /*hoverした際の変化*/
 .btntextchange:hover{
   background:#333;
   color:#fff;
 }
-
 .btntextchange span{
     /*絶対配置でテキストの位置を決める*/
   position: absolute;
   left: 50%;
-  top:50%;
+  top: 50%;
   transform:translate(-50%,-50%);
     /*アニメーションの指定*/
   transition: all .5s;
@@ -92,23 +90,22 @@
   display: block;
   white-space: nowrap;
 }
-
 /*差し替わるテキストの設定*/
 .btntextchange span:nth-child(2){
   opacity:0;/*透過0に*/
 }
-
 /*hoverするとテキストが入れ替わる設定*/
 .btntextchange:hover span:nth-child(1){
   opacity:0;/*透過0に*/
 }
-
 .btntextchange:hover span:nth-child(2){
   opacity:1;/*不透明に*/
 }
 
 
+
 // ユーザー詳細の投稿一覧いいね一覧の切り替え
+
 ul, li {
   list-style-type: none;
   padding: 0;
@@ -131,5 +128,8 @@ ul, li {
 .user-tabs a {
   display: inline-block;
   padding: 16px 30px;
+  color: #afb6bf;
+}
+.user-tabs a:hover {
   color: #afb6bf;
 }
