--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,40 +1,56 @@
 <div class="container">
   <div class="row">
-    <div class="col text-center mt-5">
-      <h2>早速新規登録をして金融リテラシーを高めていきましょう</h2>
+    <div class="col pt-4">
+      <%= render "devise/shared/error_messages", resource: resource %>
     </div>
   </div>
   <div class="row">
-    <div class="col-5"></div>
-    <div class="col-3 mt-3 mb-5">
-      <h2>Sign up</h2>
+    <div class="col text-center pt-4">
+      <h4>登録をして金融リテラシーを高めていきましょう</h4>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-3"></div>
+    <div class="col-6 pt-3 pb-5">
       <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
-        <div class="field">
-          <%= f.label :name %><br>
-          <%= f.text_field :name, autofocus: true %>
+        <div class="row field">
+          <div class="col">
+            <%= f.label :name %><br>
+            <%= f.text_field :name, autofocus: true, class: 'form-control' %>
+          </div>
         </div>
-        <div class="field">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="row field">
+          <div class="col">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+          </div>
         </div>
-        <div class="field">
-          <%= f.label :password %>
-          <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "new-password" %>
+        <div class="row field">
+          <div class="col">
+            <%= f.label :password %>
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %><br />
+            <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
+          </div>
         </div>
-        <div class="field">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        <div class="row field">
+          <div class="col">
+            <%= f.label :password_confirmation %><br />
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+          </div>
         </div>
-        <div class="actions">
-          <%= f.submit "新規登録" %>
+        <div class="row actions pt-4">
+          <div class="col-8 col-lg-3 pb-3">
+            <%= link_to "戻る", root_path, class: "btn btn-outline-secondary btn-block" %>
+          </div>
+          <div class="col-8 col-lg-9 pb-3">
+            <%= f.submit "登録する", class: "btn btn-outline-dark btn-block" %>
+          </div>
         </div>
       <% end %>
       <%= render "devise/shared/links" %>
     </div>
-    <div class="col-4"></div>
+    <div class="col-3"></div>
   </div>
 </div>
