--- a/app/views/homes/answer.html.erb
+++ b/app/views/homes/answer.html.erb
@@ -1,12 +1,17 @@
 <div class="container">
   <div class="row">
-    <div class="col my-5 text-center">
-      <%= @result %><span>万円</span>
+    <div class="col pt-5 text-center">
+      <h3>70歳までに3000万の資金を準備するには</h3>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col py-5 text-center">
+      <h1>毎月<strong><span><%= @result.ceil %>円</span></strong>積み立てていけば達成できます</h1>
     </div>
   </div>
   <div class="row text-center my-5">
-    <div class="col"><%= link_to'想像より低かった', new_user_registration_path, class: 'btn btn-primary' %></div>
-    <div class="col"><%= link_to'高くて厳しい', save_path, class: 'btn btn-primary' %></div>
+    <div class="col"><%= link_to'想像より低かった', new_user_registration_path, class: 'btn btn-outline-dark' %></div>
+    <div class="col"><%= link_to'高くて厳しい', save_path, class: 'btn btn-outline-dark' %></div>
   </div>
   <div class="row">
     <div class="col my-5">
