--- a/app/views/layouts/_aboutheader.html.erb
+++ b/app/views/layouts/_aboutheader.html.erb
@@ -1,21 +1,21 @@
 <header class="about-bg-image">
-  <nav class="navbar navbar-expand-lg navbar-dark">
-    <%= link_to " FBA", root_path, class: "navbar-brand header-logo text-dark"%>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <%= link_to " FBA", root_path, class: "navbar-brand header-logo text-light"%>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
-          <li><%= link_to 'My page', user_path(current_user), class: 'nav-link text-dark' %></li>
-          <li><%= link_to 'About', about_path, class: 'nav-link text-dark' %></li>
-          <li><%= link_to 'Users', users_path, class: 'nav-link text-dark' %></li>
-          <li><%= link_to 'Logb out', destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %></li>
+          <li><%= link_to 'About', about_path, class: 'nav-link text-light' %></li>
+          <li><%= link_to 'My page', user_path(current_user), class: 'nav-link text-light' %></li>
+          <li><%= link_to 'Users', users_path, class: 'nav-link text-light' %></li>
+          <li><%= link_to 'Logb out', destroy_user_session_path, method: :delete, class: 'nav-link text-light' %></li>
         <% else %>
-          <li><%= link_to 'About', about_path, class: 'nav-link text-dark' %></li>
-          <li><%= link_to 'Investment', investment_path, class: 'nav-link text-dark' %></li>
-          <li><%= link_to 'Sign up', new_user_registration_path, class: 'nav-link text-dark' %></li>
-          <li><%= link_to 'Log in', new_user_session_path, class: 'nav-link text-dark' %></li>
+          <li><%= link_to 'About', about_path, class: 'nav-link text-light' %></li>
+          <li><%= link_to 'Investment', investment_path, class: 'nav-link text-light' %></li>
+          <li><%= link_to 'Sign up', new_user_registration_path, class: 'nav-link text-light' %></li>
+          <li><%= link_to 'Log in', new_user_session_path, class: 'nav-link text-light' %></li>
         <% end %>
         </ul>
       </div>
