--- a/app/views/post_comments/_form.html.erb
+++ b/app/views/post_comments/_form.html.erb
@@ -1,8 +1,6 @@
-<div class="col-3"></div>
+<div class="col-12 text-center">
 <%= form_with model:[post, post_comment] do |f| %>
-<div class="col-6">
   <%= f.text_area :comment, size: "30x5", placeholder: "コメントをここに" %>
-  <%= f.submit "送信", class: 'btn btn-primary' %>
-</div>
+  <%= f.submit "送信", class: 'btn btn-outline-dark' %>
 <% end %>
-<div class="col-3"></div>
+</div>
