--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -1,6 +1,10 @@
 <% posts.each do |post| %>
 <div class="row">
-  <div class="col-2"><%= attachment_image_tag post.user, :profile_image, :fill, 60, 60, class: "rounded-circle", fallback: "no_image.jpg", size: "50x50" %></div>
+  <div class="col-2">
+    <%= link_to user_path(post.user.id) do %>
+    <%= attachment_image_tag post.user, :profile_image, :fill, 60, 60, class: "rounded-circle", fallback: "no_image.jpg", size: "50x50" %>
+    <% end %>
+  </div>
   <div class="col-2"><%= post.user.name %></div>
   <div class="col-5"><%= post.created_at.strftime('%Y/%m/%d') %></div>
 </div>
@@ -10,11 +14,11 @@
 </div>
 <div class="row my-4">
   <div class="col-2"></div>
-  <div class="col-10"><%= link_to post.introduction, post_path(post.id) %></div>
+  <div class="col-10 introduction-link"><%= link_to post.introduction, post_path(post.id) %></div>
 </div>
 <div class="row">
   <div class="col-3"></div>
-  <div class="col-3">
+  <div class="col-3 comment-link">
     <%= link_to '', post_path(post.id), class: 'far fa-comment' %> <%= post.post_comments.count %>
   </div>
   <div class="col-3 like-btn<%= post.id %>">
