--- a/app/views/relationships/followings.html.erb
+++ b/app/views/relationships/followings.html.erb
@@ -7,7 +7,7 @@
     </div>
     <div class="col-6">
         <div class="row">
-          <div class="col-2"><%= link_to '', user_path(@user.id), class: 'fas fa-long-arrow-alt-left fa-3x' %></div>
+          <div class="col-2"><%= link_to '', user_path(@user.id), class: 'all-btn fas fa-long-arrow-alt-left fa-3x' %></div>
           <div class="col-2"><%= @user.name %></div>
         </div>
         <div class="row my-4">
