--- a/app/views/search/_searchbar.html.erb
+++ b/app/views/search/_searchbar.html.erb
@@ -1,7 +1,7 @@
-<div class="row">
-  <div class="col test-center mt-4">
+<div class="row sidebar">
+  <div class="col test-center mt-4" id="form">
     <%= form_with url:search_path, method: :get, local: true do |f| %>
-      <%= f.text_field 'search[value]' %>
+      <%= f.text_field 'search[value]', class: "text-field" %>
       <%= f.select 'search[model]', options_for_select({ "Post" => "post", "User" => "user" }) %>
       <%= f.select 'search[how]', options_for_select({ "キーワード" => "partical", "完全一致" => "match" }) %>
       <%= f.submit :'検索' %>
