--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -1,8 +1,12 @@
 <% users.each do |user| %>
 <div class="row">
-  <div class="col-2"><%= attachment_image_tag user, :profile_image, :fill, 50, 50, format: 'jpeg', class: "rounded-circle", fallback: "no_image.jpg", size: "50x50" %></div>
+  <div class="col-2">
+    <%= link_to user_path(user.id) do %>
+    <%= attachment_image_tag user, :profile_image, :fill, 50, 50, format: 'jpeg', class: "rounded-circle", fallback: "no_image.jpg", size: "50x50" %>
+    <% end %>
+  </div>
   <div class="col-6">
-    <div class="row"><%= link_to user.name, user_path(user.id) %></div>
+    <div class="row"><%= user.name %></div>
     <div class="row"><%= user.introduction %></div>
   </div>
   <% if user.id == current_user.id %>
