--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
     <div class="col-6">
       <%= render 'users/profile', user: @user %>
       <div class="row">
-        <ul class="user-tabs">
+        <ul class="col user-tabs">
           <li class="active"><%= link_to "投稿", user_path(@user.id) %></li>
           <li><%= link_to "いいね", user_likes_path(@user.id) %></li>
         </ul>
@@ -19,16 +19,7 @@
     </div>
     <!--検索機能-->
     <div class="col-3 d-none d-lg-block">
-      <div class="row sidebar">
-        <div class="col test-center mt-4">
-          <%= form_with url:search_path, method: :get, local: true do |f| %>
-            <%= f.text_field 'search[value]' %>
-            <%= f.select 'search[model]', options_for_select({ "Post" => "post", "User" => "user" }) %>
-            <%= f.select 'search[how]', options_for_select({ "キーワード" => "partical", "完全一致" => "match" }) %>
-            <%= f.submit :'検索' %>
-          <% end %>
-        </div>
-      </div>
+      <%= render 'search/searchbar' %>
     </div>
   </div>
 </div>
